fix overflow issue on page header

--- a/src/components/Global/DropdownMenu2/DropdownMenu2.module.css
+++ b/src/components/Global/DropdownMenu2/DropdownMenu2.module.css
@@ -4,16 +4,12 @@
     align-items: center;
     color: var(--text1);
     width: 100%;
-    padding: 5px 12px;
     border-right: 4px solid transparent;
     transition: 0.2s cubic-bezier(0.6, -0.28, 0.735, 0.045);
     justify-content: center;
     gap: 4px;
     position: relative;
     z-index: 999;
-
-    /* background: var(--dark2);
-    border-radius: 4px; */
 }
 
 .menu_item {
@@ -21,7 +17,6 @@
     gap: 4px;
     cursor: pointer;
     z-index: 999;
-    margin-right: 0.5em;
 }
 
 .menu_container {
